When the `property_name` is empty, `Glib::ObjectBase::connect_property_changed` no longer works with newer glib
I noticed that in https://gitlab.gnome.org/GNOME/glibmm/-/blob/master/glib/glibmm/propertyproxy_base.cc#L47 , glibmm has hard-coded the notify_signal_name
to have notify::
as the prefix. When the caller wants to be notified for every property change of an object, it will call Glib::ObjectBase::connect_property_changed
with an empty property_name
, so in the end we get notify::
as the signal name passed to glib.
Before this works fine but after commit glib@5e89ba5a , glib has tighten the format and notify::
with empty property name is no longer allowed. Instead, if an application wants to be notified for every property change, it should pass notify
without the ::
. But looks like currently glibmm doesn't support that.
In the end the result is if the glib is after the aforementioned commit, Glib::ObjectBase::connect_property_changed
may no longer works when the property name is empty. And seems there is no way an application can "connect" to every property change.
Could glibmm experts help see if it is a real issue or I misunderstood anything? Thanks!