propertyproxy_base: Fix using notify w/o prop name

GLib has now specified that if you want to connect to a signal without a
detail argument, you omit the `::`. So, glibmm users previously
connecting to `notify::` to listen for changes to all properties broke.
Fix that by only passing `notify` i.e. no superfluous `::` in that case.

Close https://gitlab.gnome.org/GNOME/glibmm/-/issues/74
Close https://gitlab.gnome.org/GNOME/glibmm/-/merge_requests/35